test/libsolidity/syntaxTests/constructor/constructor_override.sol
contract C {
    constructor() override public {}
}
// ----
// TypeError 1209: (17-49): Constructors cannot override.
